--- a/style.css
+++ b/style.css
@@ -4,35 +4,36 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.info img {
   width: 100%;
 }
-.aaa .more_inf {
+.info .info__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .info { 
     text-align: center;
   }
 }
-.centered-main-page-element {
+.todo {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.todo__elem_size {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+
+.todo__wrap {
   display: flex;
 }
 ul {
@@ -61,7 +62,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for="new-task"] {
+label[for="todo__input_add-new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,11 +88,11 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="todo__input_add-new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+input#todo__input_add-new-task {
   width: 318px;
 }
 
@@ -120,17 +121,17 @@ li > label {
 li >    input[type="text"] {
   width: 226px;
 }
-button.delete img {
+button.todo__button_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.todo__button_delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#todo__list_completed label {
   text-decoration: line-through;
   color: #888;
 }
@@ -140,11 +141,11 @@ ul li input[type=text] {
     display: none;
 }
 
-ul li.editMode input[type=text] {
+ul li.todo__item_edit input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.todo__item_edit label {
   display: none;
 }
